# LLM-BookRecommender

./: README.md  bookrecommendor.ipynb  bookrecommendor_fixed.ipynb  gradio-dashboard.py  main.py  pyproject.toml  tagged_descriptions.txt
